6.3 Added annotations. Change loop. Clean Main method.